Agrego dos locales (Fravega y The North Face)

--- a/index.html
+++ b/index.html
@@ -115,19 +115,75 @@
           <div class="piso-contenedor">
             <h3 class="piso-titulo">Planta Baja</h3>
             <ul class="locales-lista">
-              <li><img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas" /><div class="local-info"><strong>Adidas</strong><p>Planta Baja - Local 130</p></div><a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a></li>
-              <li><img src="Imagenes/Logo-US.png" alt="Logo de Urban Style" /><div class="local-info"><strong>Urban Style</strong><p>Planta Baja - Local 145</p></div><a href="https://fedesorii.github.io/DyDW-TP-UrbanStyle/" class="boton-local" target="_blank">Página Oficial</a></li>
+              <li>
+                <img src="Imagenes/adidas_logo.jpg" alt="Logo de Adidas" />
+                <div class="local-info"><strong>Adidas</strong>
+                  <p>Planta Baja - Local 130</p>
+                </div>
+                <a href="https://www.adidas.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
+              <li>
+                <img src="Imagenes/Logo-US.png" alt="Logo de Urban Style" />
+                <div class="local-info"><strong>Urban Style</strong>
+                  <p>Planta Baja - Local 145</p>
+                </div>
+                <a href="https://fedesorii.github.io/DyDW-TP-UrbanStyle/" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
               <li><img src="Imagenes/dexter_logo.jpg" alt="Logo de Dexter" /><div class="local-info"><strong>Dexter</strong><p>Planta Baja - Local 112</p></div><a href="https://dexter.com.ar/" class="boton-local" target="_blank">Página Oficial</a></li>
-              <li><img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" /><div class="local-info"><strong>Columbia Sportswear</strong><p>Planta Baja - Local 127</p></div><a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a></li>
+              <li>
+                <img src="Imagenes/columbia_logo.png" alt="Logo de Columbia" />
+                <div class="local-info"><strong>Columbia Sportswear</strong>
+                  <p>Planta Baja - Local 127</p>
+                </div>
+                <a href="https://www.columbiasportswear.com.ar/" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
+              <li>
+                <img src="Imagenes/northface_logo.png" alt="Logo de The North Face" />
+                <div class="local-info"><strong>The Northface</strong>
+                  <p>Planta Baja - Local 102</p>
+                </div>
+                <a href="https://www.thenorthface.com.ar" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
             </ul>
           </div>
           <div class="piso-contenedor">
             <h3 class="piso-titulo">Primer Piso</h3>
             <ul class="locales-lista">
-              <li><img src="Imagenes/FundaLab_Logo.jpg" alt="Logo de FundaLab"/><div class="local-info"><strong>FundaLab</strong><p>Primer Piso - Local 216</p></div><a href="https://eitangrod.github.io/Local-comercial/" class="boton-local" target="_blank">Página Oficial</a></li>
-              <li><img src="Imagenes/Timora_Logo.jpg" alt="Logo de Timora"/><div class="local-info"><strong>Timora</strong><p>Primer Piso - Local 268</p></div><a href="https://dsket.github.io/Timora/index.html" class="boton-local" target="_blank">Página Oficial</a></li>
-              <li><img src="Imagenes/Foto-Grafia_Logo.jpg" alt="Logo de Foto-Grafia"/><div class="local-info"><strong>Foto-Grafia</strong><p>Primer Piso - Local 231</p></div><a href="https://awpii.github.io/WebDesign_UADE/" class="boton-local" target="_blank">Página Oficial</a></li>
-              <li><img src="Imagenes/TecnoGReal_Logo2.jpg" alt="Logo de Tecno G Real"/><div class="local-info"><strong>Tecno G Real</strong><p>Primer Piso - Local 247</p></div><a href="http://manugallina014.github.io/TPparcialDise-oWeb/" class="boton-local" target="_blank">Página Oficial</a></li>
+              <li>
+                <img src="Imagenes/Fravega_Logo.jpg" alt="Logo de Fravega"/>
+                <div class="local-info"><strong>Fravega</strong>
+                  <p>Primer Piso - Local 201</p>
+                </div>
+                <a href="https://www.fravega.com" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
+              <li>
+                <img src="Imagenes/FundaLab_Logo.jpg" alt="Logo de FundaLab"/>
+                <div class="local-info"><strong>FundaLab</strong>
+                  <p>Primer Piso - Local 216</p>
+                </div>
+                <a href="https://eitangrod.github.io/Local-comercial/" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
+              <li>
+                <img src="Imagenes/Timora_Logo.jpg" alt="Logo de Timora"/>
+                <div class="local-info"><strong>Timora</strong>
+                  <p>Primer Piso - Local 268</p>
+                </div>
+                <a href="https://dsket.github.io/Timora/index.html" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
+              <li>
+                <img src="Imagenes/Foto-Grafia_Logo.jpg" alt="Logo de Foto-Grafia"/>
+                <div class="local-info"><strong>Foto-Grafia</strong>
+                  <p>Primer Piso - Local 231</p>
+                </div>
+                <a href="https://awpii.github.io/WebDesign_UADE/" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
+              <li>
+                <img src="Imagenes/TecnoGReal_Logo2.jpg" alt="Logo de Tecno G Real"/>
+                <div class="local-info"><strong>Tecno G Real</strong>
+                  <p>Primer Piso - Local 247</p>
+                </div>
+                <a href="http://manugallina014.github.io/TPparcialDise-oWeb/" class="boton-local" target="_blank">Página Oficial</a>
+              </li>
             </ul>
           </div>
         </div>
