Agrego imagenes de servicios, novedades, agrego estilos para tarjetas de novedades y servicios, doy formato y modifico el index.

--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
         <h2 class="titulo-seccion">NOVEDADES</h2>
         <div class="contenedor-novedades">
           <div class="caja-novedad">
-            <img src="novedad1" alt="Imagen de novedad 1" />
-            <h3>Novedad 1</h3>
-            <p>Esta es la novedad 1, cuando sepas qué voy a ser modificame</p>
+            <img src="Imagenes/exhibicion_padel_novedad2.jpg" alt="Exhibición de pádel en el shopping" />
+            <h3>¡Exhibición de Pádel!</h3>
+            <p>Vení a disfrutar de una increíble exhibición de pádel con jugadores profesionales en el corazón de nuestro shopping. ¡No te lo pierdas!</p>
           </div>
           <div class="caja-novedad">
-            <h3>Novedad 2</h3>
-            <p>Esta es la novedad 2, cuando sepas qué voy a ser modificame</p>
-            <img src="novedad2" alt="Imagen de novedad 2" />
+            <img src="Imagenes/navidad_abasto.jpg" alt="Escena de Navidad en el centro del shopping" />
+            <h3>¡Llegó la Magia de la Navidad!</h3>
+            <p>Ya podés visitar nuestra espectacular escena de Navidad. Sacate una foto con Papá Noel y viví el espíritu de las fiestas en Lil' Abasto.<p>
           </div>
         </div>
       </section>
@@ -194,16 +194,25 @@
         <h2 class="titulo-seccion">SERVICIOS</h2>
         <div class="contenedor-servicios">
           <div class="caja-servicio">
-            <h3>Estacionamiento</h3>
-            <p>Contamos con más de 1200 cocheras cubiertas. Las primeras 2 horas son sin cargo presentando tu ticket de compra.</p>
+            <img src="Imagenes/estacionamiento.jpg" alt="Estacionamiento cubierto del shopping">
+            <div class="servicio-info">
+              <h3>Estacionamiento</h3>
+              <p>Contamos con más de 1200 cocheras cubiertas. Las primeras 2 horas son sin cargo presentando tu ticket de compra.</p>
+            </div>
           </div>
           <div class="caja-servicio">
-            <h3>Baños y Sala Familiar</h3>
-            <p>Baños accesibles en todos los pisos y una sala de lactancia y cambiadores para tu comodidad.</p>
+            <img src="Imagenes/baños.jpg" alt="Señalética de baños modernos y accesibles">
+            <div class="servicio-info">
+              <h3>Baños y Sala Familiar</h3>
+              <p>Baños accesibles en todos los pisos y una sala de lactancia y cambiadores para tu comodidad.</p>
+            </div>
           </div>
           <div class="caja-servicio">
-            <h3>Patio de Comidas</h3>
-            <p>Una amplia variedad de opciones gastronómicas para todos los gustos en nuestro renovado patio de comidas.</p>
+            <img src="Imagenes/patio_comidas.png" alt="Patio de comidas del centro comercial">
+            <div class="servicio-info">
+              <h3>Patio de Comidas</h3>
+              <p>Una amplia variedad de opciones gastronómicas para todos los gustos en nuestro renovado patio de comidas.</p>
+            </div>
           </div>
         </div>
       </section>
