Agrego efecto especial

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h3>¡Exhibición de Pádel!</h3>
             <p>Vení a disfrutar de una increíble exhibición de pádel con jugadores profesionales en el corazón de nuestro shopping. ¡No te lo pierdas!</p>
           </div>
-          <div class="caja-novedad">
+          <div class="caja-novedad" id="novedad-navidad">
             <img src="Imagenes/navidad_abasto.jpg" alt="Escena de Navidad en el centro del shopping" />
             <h3>¡Llegó la Magia de la Navidad!</h3>
             <p>Ya podés visitar nuestra espectacular escena de Navidad. Sacate una foto con Papá Noel y viví el espíritu de las fiestas en Lil' Abasto.<p>
