--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Funnel+Display:wght@400;700&display=swap"/>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Funnel+Display:wght@400;700&display=swap" rel="stylesheet"/>
   </head>
 
   <body class="body-general">
