Corrijo el nombre de una imagen porque no la toma github pages.

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <h3 class="piso-titulo">Primer Piso</h3>
             <ul class="locales-lista">
               <li>
-                <img src="Imagenes/Fravega_Logo.jpg" alt="Logo de Fravega"/>
+                <img src="Imagenes/fravega_logo.jpg" alt="Logo de Fravega"/>
                 <div class="local-info"><strong>Fravega</strong>
                   <p>Primer Piso - Local 201</p>
                 </div>
