--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
             </ul>
           </nav>
           <div class="caja-mapa">
-            <img id="img-subsuelo" src="subsuelo" alt="Imagen del Subsuelo" />
-            <img id="img-plantabaja" src="plantabaja" alt="Imagen de la Planta Baja"/>
-            <img id="img-primerpiso" src="pisouno" alt="Imagen del Primer Piso"/>
+            <img id="img-subsuelo" src="Imagenes/subsuelo.jpeg" alt="Imagen del Subsuelo" />
+            <img id="img-plantabaja" src="Imagenes/plantabaja.jpeg" alt="Imagen de la Planta Baja"/>
+            <img id="img-primerpiso" src="Imagenes/pisouno.jpeg" alt="Imagen del Primer Piso"/>
           </div>
         </div>
       </section>
